# kernelthing

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
kernelthing/: __init__.py  bench.py  bootstrap.py  bus.py  cli.py  config.py  evolve.py  gates.py  gpu_run.sh  gpucontrol.py  gpulock.py  gpupool.py  journal.py  opencode_client.py  orchestrator.py  problem.py  prompts.py  sandbox.py  state.py  webui.py
kernelthing/native/: ktgpu.c
kernelthing/oc_guard/: guard.js  guard_core.js  package.json
kernelthing/webui/: __init__.py  app.js  index.html
prompts/block/: claude-eyes-timeout.md  codex-review-failed.md  edit-file-protected.md  finalize-state-file-modification.md  git-not-clean.md  goal-tracker-modification.md  gpu-tamper.md  gpu-unlocked.md  incomplete-todos.md  kernelguard-cheat.md  large-files.md  mainline-verdict-missing.md  plan-file-modified.md  prompt-file-write.md  schema-outdated.md  todos-file-access.md
prompts/claude/: agent-teams-continue.md  agent-teams-core.md  bootstrap-mode-auto.md  bootstrap-mode-interactive.md  bootstrap-problem.md  drift-replan-prompt.md  finalize-phase-prompt.md  finalize-phase-skipped-prompt.md  goal-tracker-update-request.md  init-task-spec.md  kernel-tools-ncu.md  kernel-tools-wiki.md  methodology-analysis-prompt.md  next-round-footer.md  next-round-prompt.md  open-question-notice.md  post-alignment-action-items.md  review-phase-prompt.md
prompts/codex/: code-review-phase.md  full-alignment-review.md  goal-tracker-update-section.md  regular-review.md
prompts/plan/: gen-plan-template.md
tests/: guard_driver.mjs  test_bench.py  test_bootstrap.py  test_evolve.py  test_gates.py  test_gpu_shim.py  test_gpucontrol.py  test_oc_guard.py  test_prompts.py  test_score_candidate.py  test_state.py  test_webui.py
