[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelthing"
version = "0.1.0"
description = "Autonomous evolutionary GPU-kernel optimization loop driving the opencode agent."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Aaron Pazdera", email = "aarpazdera@gmail.com" }]
requires-python = ">=3.11"

# The ``opencode`` CLI (and Node, for the guard plugin) are external prerequisites,
# not pip deps.
dependencies = [
  "kernelguard",
  "pygpubench @ git+https://github.com/apaz-cli/pygpubench",
  "torch",
  "numpy",
  "PyYAML>=6.0",
]
# pygpubench (+ torch) is the DEFAULT scoring engine (kernelthing/bench.py
# runs each kernel in pygpubench's adversarial, sandboxed subprocess).
# ``--no-pygpubench`` bypasses it for command-scored problems.
[project.urls]
GitHub = "https://github.com/apaz-cli/kernelthing"

[project.optional-dependencies]
# Test / development tooling.
dev = ["pytest", "ruff>=0.11.0", "mypy>=1.14"]

[project.scripts]
kernelthing = "kernelthing.cli:main"

[tool.setuptools.packages.find]
include = ["kernelthing*"]

# The opencode PreToolUse guard plugin ships inside the package (loaded by
# opencode as an external plugin; see kernelthing/opencode_client.py).
[tool.setuptools.package-data]
kernelthing = ["oc_guard/*.js", "oc_guard/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "T20", "Q", "RUF", "SIM", "C4"]
# T201: print() to stderr is the intended logger for this CLI tool
# E501: line length is enforced by the formatter; the webui inline HTML/JS is exempt
ignore = ["T201", "E501"]

[tool.ruff.lint.per-file-ignores]
# The inline web UI is a single minified HTML/CSS/JS string; length rules don't apply.
"kernelthing/webui.py" = ["E501", "SIM102", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["kernelthing"]

[tool.mypy]
strict = true
exclude = ["tests/", "build/", ".venv/", "sandbox/", "vendor/", "problems/"]
ignore_missing_imports = true
disallow_untyped_defs = true
